--- a/.github/workflows/metrics_action.yml
+++ b/.github/workflows/metrics_action.yml
@@ -48,7 +48,8 @@ jobs:
           plugin_languages_analysis_timeout_repositories: 100
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
-          plugin_languages_ignored: Jupyter Notebook , Batchfile #TODO : later  Batchfile when you remove cmder to a standalone  repo
+          plugin_languages_ignored: Jupyter Notebook, Batchfile 
+          #TODO : later  Batchfile when you remove cmder to a standalone  repo
           plugin_languages_limit: 8
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 365
