--- a/.github/workflows/metrics_action.yml
+++ b/.github/workflows/metrics_action.yml
@@ -32,31 +32,52 @@ jobs:
           config_octicon: yes
           config_timezone: Africa/Cairo
           config_twemoji: yes
-          plugin_achievements: yes
-          plugin_achievements_display: compact
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
-          plugin_habits: yes
-          plugin_habits_charts_type: classic
-          plugin_habits_days: 60
-          plugin_habits_facts: yes
-          plugin_habits_from: 50
-          plugin_habits_languages_limit: 10
-          plugin_habits_languages_threshold: 0%
+          
           plugin_languages: yes
-          plugin_languages_analysis_timeout: 100
+          plugin_languages_indepth: yes
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_details: lines
           plugin_languages_analysis_timeout_repositories: 100
           plugin_languages_categories: markup , programming , scripting
+          plugin_languages_recent_categories: markup, programming , scripting
           plugin_languages_colors: github
           plugin_languages_ignored: Jupyter Notebook , HTML , CSS
-          #TODO : later  Batchfile when you remove cmder to a standalone  repo
+          plugin_languages_skipped: orsnaro   #the repos that are skipped 
           plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming , scripting
           plugin_languages_recent_days: 365
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          
           plugin_lines: yes
           plugin_lines_history_limit: 1
           plugin_lines_repositories_limit: 10
           plugin_lines_sections: base
+    
+          plugin_habits: yes
+          plugin_habits_charts_type: classic
+          plugin_habits_days: 30
+          plugin_habits_facts: yes
+          plugin_habits_from: 1000
+          plugin_habits_skipped: orsnaro 
+          plugin_habits_languages_limit: 10
+          plugin_habits_languages_threshold: 0%
+          
+          plugin_achievements: yes
+          plugin_achievements_secrets: yes
+          plugin_achievements_display: compact
+          plugin_achievements_threshold: C
+          
+          plugin_activity: yes
+          plugin_activity_limit: 2
+          plugin_activity_visibility: all #options : all , public
+          plugin_activity_skipped: orsnaro , CP-study
+          #plugin_activity_ignored: #later if you want to include orsnaro repo but ignore the bot acts
+
+          
+          
+
+          
+          
+          
+       
