--- a/.github/workflows/metrics_action.yml
+++ b/.github/workflows/metrics_action.yml
@@ -2,7 +2,7 @@
 name: Metrics
 on:
   # Schedule updates (each 16 hour)
-  schedule: [{cron: "0 16 * * *"}]
+  schedule: [{cron: "0 * * * *"}]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: {branches: ["master", "main"]}
@@ -47,8 +47,8 @@ jobs:
           plugin_languages_limit: 8
           plugin_languages_recent_days: 365
           plugin_languages_recent_load: 300
-          plugin_languages_sections: most-used
-          plugin_languages_threshold: 3%
+          plugin_languages_sections: most-recent
+          plugin_languages_threshold: 5%
           
           plugin_lines: yes
           plugin_lines_history_limit: 1
