--- a/.github/workflows/metrics_action.yml
+++ b/.github/workflows/metrics_action.yml
@@ -47,8 +47,8 @@ jobs:
           plugin_languages_limit: 8
           plugin_languages_recent_days: 365
           plugin_languages_recent_load: 300
-          plugin_languages_sections: most-used , recently-used
-          plugin_languages_threshold: 5%
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
           
           plugin_lines: yes
           plugin_lines_history_limit: 1
