--- a/.github/workflows/metrics_action.yml
+++ b/.github/workflows/metrics_action.yml
@@ -75,6 +75,11 @@ jobs:
           plugin_achievements_display: compact
           plugin_achievements_threshold: C
           
+          
+          
+          #testing
+          debug : yes
+          
        
           
 
