--- a/.github/workflows/metrics_action.yml
+++ b/.github/workflows/metrics_action.yml
@@ -34,7 +34,7 @@ jobs:
           config_twemoji: yes
           
           plugin_languages: yes
-          plugin_languages_indepth: no
+          plugin_languages_indepth: yes
           plugin_languages_indepth_custom: orsnaro/ps-community-website  , orsnaro/Bmp-Manipulation-cpp@v0.1pre_A , orsnaro/Bmp-Manipulation-cpp@v0.5pre_A , orsnaro/Bmp-Manipulation-cpp@v1.0A , orsnaro/Bmp-Manipulation-cpp@v1.5B , orsnaro/Bmp-Manipulation-cpp@v1.6B
           plugin_languages_analysis_timeout: 15
           plugin_languages_details: lines
